...
          child: Column(
            children: [
              const SizedBox(height: 40),
              const Icon(Symbols.lock, size: 48, color: AppColors.primary),
              const SizedBox(height: 16),
              Text(
                _confirming ? 'Confirmez votre PIN' : 'Créez votre PIN',
                style: AppTextStyles.screenTitle.copyWith(
                  color: isDark ? AppColors.gray100 : AppColors.gray900,
                ),
                textAlign: TextAlign.center,
              ),
              const SizedBox(height: 8),
...
