...
        actions: [
          IconButton(
            icon: Icon(
              Symbols.dashboard,
              color: isDark ? AppColors.gray300 : AppColors.gray700,
            ),
            tooltip: 'Tableau de bord',
            onPressed: () => context.push('/shop/dashboard'),
          ),
          IconButton(
            icon: Icon(
              Symbols.analytics,
              color: isDark ? AppColors.gray300 : AppColors.gray700,
...
